--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -16,7 +16,11 @@
         margin-top: 67px;
         width: 300px;
         height: 50px;
-        font-size: 14px;
-        
+        font-size: 14px;        
+    }
+    &_submit {
+        width: 100%;
+        height: 55px;
+        font-size: 16px;
     }
 }
