--- a/src/sass/blocks/media.scss
+++ b/src/sass/blocks/media.scss
@@ -53,6 +53,22 @@
             text-align: center;
         }
     }
+    .consultation {      
+        .title {
+            &_left {
+                text-align: center;
+                font-size: 30px;
+            }
+        }
+        &__descr {
+            margin-top: 75px;
+            text-align: center;
+        }       
+    }
+    .feed-form {
+        margin: 0 auto;
+        margin-top: 36px;
+    }
 }
 @media ( max-width: 767px) {
     .container {
@@ -130,8 +146,26 @@
             width: 350px;
             text-align: center;
         }
-    }    
-    
+    }
+    .consultation {      
+        .title {
+            &_left {
+                text-align: center;
+                font-size: 25px;
+            }
+        }
+        &__descr {
+            margin-top: 75px;
+            font-size: 18px;
+            text-align: center;
+        }       
+    }
+    .feed-form {
+        margin: 0 auto;
+        margin-top: 36px;
+    }
+
+      
 }
 @media ( max-width: 575px) {
     .container {
@@ -160,6 +194,19 @@
             width: 300px;
             text-align: center;
         }
+    }
+    .consultation {
+        .title {
+            &_left {
+                text-align: center;
+                font-size: 20px;
+            }
+        }
+        &__descr {
+            margin-top: 60px;
+            font-size: 16px;
+            text-align: center;
+        }
     }    
 } 
 @media ( max-width: 470px) {
@@ -184,6 +231,9 @@
         }
     }
     .advantage {
+        &__header {
+            font-size: 25px;
+        }
         &__subheader {
             margin-top: 20px;
             font-size: 20px;
@@ -195,6 +245,23 @@
             width: 250px;
             text-align: center;
         }
+    }
+    .consultation {      
+        .title {
+            &_left {
+                text-align: center;
+                font-size: 15px;
+            }
+        }
+        &__descr {
+            margin-top: 45px;
+            font-size: 13px;
+            text-align: center;
+        }       
+    }
+    .feed-form {
+        margin: 0 auto;
+        margin-top: 36px;
     }
 }
 
