--- a/src/sass/blocks/_carousel.scss
+++ b/src/sass/blocks/_carousel.scss
@@ -6,7 +6,29 @@
         margin: 0 auto;
               
     }
-    .slick-prev, .slick-next {
+
+    ///////the first way to create a slider
+
+    // .slick-prev, .slick-next {
+    //     position: absolute;
+    //     top: 50%;
+    //     transform: translateY(-50%);
+    //     left: -66px;
+    //     border: none;
+    //     background-color: #fff;
+    //     img {
+    //         width: 31px;
+    //         height: 50px;
+    //     }
+    // }
+    // .slick-next {
+    //     right: -66px;
+    //     left: auto;
+    // }
+
+    /////////the second way to create a slider tiny-slider
+
+    .prev, .next {
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
@@ -18,9 +40,23 @@
             height: 50px;
         }
     }
-    .slick-next {
+    .next {
         right: -66px;
         left: auto;
     }
+    .tns-item /* tiny-slder */ {
+         img {
+             display: block;
+             margin: 0 auto;
+         }       
+    }
+    // .tns-nav { /* это маленькие кнопки */
+    //     button {
+    //         background-color: blue; 
+    //     }
+    //     .tns-nav-active {
+    //         background-color: darkred;
+    //     }
+    // }
     
 }
