--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -38,12 +38,17 @@
     }
     &__content {
         margin-top: 60px;
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
     }
     &-item {
         width: 300px;
         min-height: 440px;
         border: 2px solid #e8e8e8;
-        padding: 20px 20px 26px 20px;        
+        padding: 20px 20px 26px 20px;
+        overflow: hidden;
+        margin-bottom: 20px;        
         &__img {
             display: block;
             margin: 0 auto;
@@ -98,6 +103,52 @@
             color: #050505;
             font-size: 20px;
             font-weight: 700;
+        }
+        &__wrapper {
+            display: flex;
+            width: calc(200% + 40px);
+        }
+        &__content {
+            width: 50%;
+            margin-right: 0;
+            transform: translateX(-100%);
+            transition: 0.5 all;
+            &_active {
+                transform: translateX(0%);
+                margin-right: 20px;
+            }
+        }
+        &__list {
+            position: relative;
+            width: 50%;
+            margin-left: 20px;
+            transform: translateX(0%);            
+            padding-right: 20px;
+            transition: 0.5 all;
+            margin-bottom: 0;
+            padding-left: 19px;
+            list-style-type: none;
+            &_active {
+                transform: translateX(-100%);
+                margin-left: 0;
+            }
+            li {
+                position: relative;
+                color: #555555;
+                font-size: 14px;
+                font-weight: 300;
+                margin-bottom: 20px;
+                &::before {
+                    content: '';
+                    position: absolute;
+                    width: 5px;
+                    height: 5px;
+                    background-color: $main-color;
+                    left: -14px;
+                    top: 7px;
+                }
+            }
+
         }
     }
 }
