--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -19,4 +19,5 @@
 @import 'blocks/catalog';
 @import 'blocks/reviews';
 @import 'blocks/footer';
+@import 'blocks/overlay';
 @import 'blocks/media';
