--- a/src/sass/blocks/_consultation.scss
+++ b/src/sass/blocks/_consultation.scss
@@ -7,5 +7,14 @@
         color: #fff;
         font-size: 20px;
         font-weight: 500;
+    }
+    .error {  /* изменяем вид предупреждающего уведоления о не правильном заполнении ячеек */
+        border: 1px solid red;
+    }
+    label.error {
+        border: none;
+        text-align: center;
+        color: #fff;
+        margin-bottom: 13px;
     }   
 }
