--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,10 @@
+@import 'libs/bootstrap-reboot.min';
+@import 'libs/font';
+@import 'libs/slick';
+@import 'libs/animation';
+
+
+
 @import 'base/variables';
 @import 'base/animations';
 * {
